syntax = "proto3";

option go_package = "omdb/proto";
package omdb;

import "google/protobuf/wrappers.proto";

service OMDBService {
    rpc Search(Param) returns (SearchResult){}
    rpc Get(google.protobuf.StringValue) returns (MovieDetailResult){}
}

message Param {
    string keyword = 1;
    int32 page = 2;
}

message MovieResult {
    string title = 1;
    string year = 2;
    string imdb_id = 3;
    string type = 4;
    string poster = 5;
}

message SearchResult {
    repeated MovieResult search = 1;
    string total_results = 2;
    string response = 3;
    string error = 4;
}

message Rating {
    string source = 1;
    string value = 2;
}

message MovieDetailResult {
    string title = 1;
    string year = 2;
    string rated = 3;
    string released = 4;
    string runtime = 5;
    string genre = 6;
    string director = 7;
    string writer = 8;
    string actors = 9;
    string plot = 10;
    string language = 11;
    string country = 12;
    string awards = 13;
    string poster = 14;
    repeated Rating ratings = 15;
    string metascore = 16;
    string imdb_rating = 17;
    string imdb_votes = 18;
    string imdb_id = 19;
    string type = 20;
    string dvd = 21;
    string box_office = 22;
    string production = 23;
    string website = 24;
    string response = 25;
    string error = 26;

}